src/petal/snapshots/petal__petal__parser__tests__functions-3.snap
---
source: src/petal/parser.rs
expression: "parse_stmt(\"fn foo(a, b) {}\")"
---
Func(
    FuncDecl {
        name: "foo",
        is_exported: false,
        type_params: [],
        args: [
            FuncArg {
                name: "a",
                span: Span {
                    start: Pos {
                        line: 0,
                        col: 8,
                    },
                    end: Pos {
                        line: 0,
                        col: 8,
                    },
                },
                ty: None,
            },
            FuncArg {
                name: "b",
                span: Span {
                    start: Pos {
                        line: 0,
                        col: 11,
                    },
                    end: Pos {
                        line: 0,
                        col: 11,
                    },
                },
                ty: None,
            },
        ],
        body: Block {
            statements: [],
            span: Span {
                start: Pos {
                    line: 0,
                    col: 14,
                },
                end: Pos {
                    line: 0,
                    col: 15,
                },
            },
        },
        span: Span {
            start: Pos {
                line: 0,
                col: 1,
            },
            end: Pos {
                line: 0,
                col: 15,
            },
        },
    },
)
