src/petal/snapshots/petal__petal__parser__tests__functions-4.snap
---
source: src/petal/parser.rs
expression: "parse_stmt(\"\n        fn foo(foo, bar) {\n            let a = foo + bar\n        }\")"
---
Func(
    FuncDecl {
        name: "foo",
        is_exported: false,
        type_params: [],
        args: [
            FuncArg {
                name: "foo",
                span: Span {
                    start: Pos {
                        line: 1,
                        col: 16,
                    },
                    end: Pos {
                        line: 1,
                        col: 18,
                    },
                },
                ty: None,
            },
            FuncArg {
                name: "bar",
                span: Span {
                    start: Pos {
                        line: 1,
                        col: 21,
                    },
                    end: Pos {
                        line: 1,
                        col: 23,
                    },
                },
                ty: None,
            },
        ],
        body: Block {
            statements: [
                Let(
                    LetDecl {
                        name: "a",
                        ty: None,
                        init: BinaryOp {
                            left: Ident {
                                name: "foo",
                                span: Span {
                                    start: Pos {
                                        line: 2,
                                        col: 21,
                                    },
                                    end: Pos {
                                        line: 2,
                                        col: 23,
                                    },
                                },
                            },
                            op: Token {
                                token_type: Plus,
                                lexeme: "+",
                                literal: None,
                                span: Span {
                                    start: Pos {
                                        line: 2,
                                        col: 25,
                                    },
                                    end: Pos {
                                        line: 2,
                                        col: 25,
                                    },
                                },
                            },
                            right: Ident {
                                name: "bar",
                                span: Span {
                                    start: Pos {
                                        line: 2,
                                        col: 27,
                                    },
                                    end: Pos {
                                        line: 2,
                                        col: 29,
                                    },
                                },
                            },
                            span: Span {
                                start: Pos {
                                    line: 2,
                                    col: 21,
                                },
                                end: Pos {
                                    line: 2,
                                    col: 29,
                                },
                            },
                        },
                        span: Span {
                            start: Pos {
                                line: 2,
                                col: 13,
                            },
                            end: Pos {
                                line: 2,
                                col: 29,
                            },
                        },
                    },
                ),
            ],
            span: Span {
                start: Pos {
                    line: 1,
                    col: 26,
                },
                end: Pos {
                    line: 3,
                    col: 9,
                },
            },
        },
        span: Span {
            start: Pos {
                line: 1,
                col: 9,
            },
            end: Pos {
                line: 3,
                col: 9,
            },
        },
    },
)
