src/petal/snapshots/petal__petal__parser__tests__functions-5.snap
---
source: src/petal/parser.rs
expression: "parse_stmt(\"export fn foo() {}\")"
---
Func(
    FuncDecl {
        name: "foo",
        is_exported: true,
        type_params: [],
        args: [],
        body: Block {
            statements: [],
            span: Span {
                start: Pos {
                    line: 0,
                    col: 17,
                },
                end: Pos {
                    line: 0,
                    col: 18,
                },
            },
        },
        span: Span {
            start: Pos {
                line: 0,
                col: 1,
            },
            end: Pos {
                line: 0,
                col: 18,
            },
        },
    },
)
