src/petal/snapshots/petal__petal__parser__tests__functions-6.snap
---
source: src/petal/parser.rs
expression: "parse_stmt(\"fn foo(a: Int) {}\")"
---
Func(
    FuncDecl {
        name: "foo",
        is_exported: false,
        args: [
            FuncArg {
                name: "a",
                span: Span {
                    start: Pos {
                        line: 0,
                        col: 8,
                    },
                    end: Pos {
                        line: 0,
                        col: 8,
                    },
                },
                ty: Some(
                    TypeAnnotation {
                        name: "Int",
                        span: Span {
                            start: Pos {
                                line: 0,
                                col: 11,
                            },
                            end: Pos {
                                line: 0,
                                col: 13,
                            },
                        },
                    },
                ),
            },
        ],
        body: Block {
            statements: [],
            span: Span {
                start: Pos {
                    line: 0,
                    col: 16,
                },
                end: Pos {
                    line: 0,
                    col: 17,
                },
            },
        },
        span: Span {
            start: Pos {
                line: 0,
                col: 1,
            },
            end: Pos {
                line: 0,
                col: 17,
            },
        },
    },
)
