src/petal/snapshots/petal__petal__parser__tests__functions-7.snap
---
source: src/petal/parser.rs
expression: "parse_stmt(\"fn foo<T>() {}\")"
---
Func(
    FuncDecl {
        name: "foo",
        is_exported: false,
        type_params: [
            TypeAnnotation {
                name: "T",
                span: Span {
                    start: Pos {
                        line: 0,
                        col: 8,
                    },
                    end: Pos {
                        line: 0,
                        col: 8,
                    },
                },
            },
        ],
        args: [],
        body: Block {
            statements: [],
            span: Span {
                start: Pos {
                    line: 0,
                    col: 13,
                },
                end: Pos {
                    line: 0,
                    col: 14,
                },
            },
        },
        span: Span {
            start: Pos {
                line: 0,
                col: 1,
            },
            end: Pos {
                line: 0,
                col: 14,
            },
        },
    },
)
