src/petal/snapshots/petal__petal__parser__tests__functions-8.snap
---
source: src/petal/parser.rs
expression: "parse_stmt(\"fn foo<T>(a: T) {}\")"
---
Func(
    FuncDecl {
        name: "foo",
        is_exported: false,
        type_params: [
            TypeAnnotation {
                name: "T",
                span: Span {
                    start: Pos {
                        line: 0,
                        col: 8,
                    },
                    end: Pos {
                        line: 0,
                        col: 8,
                    },
                },
            },
        ],
        args: [
            FuncArg {
                name: "a",
                span: Span {
                    start: Pos {
                        line: 0,
                        col: 11,
                    },
                    end: Pos {
                        line: 0,
                        col: 11,
                    },
                },
                ty: Some(
                    TypeAnnotation {
                        name: "T",
                        span: Span {
                            start: Pos {
                                line: 0,
                                col: 14,
                            },
                            end: Pos {
                                line: 0,
                                col: 14,
                            },
                        },
                    },
                ),
            },
        ],
        body: Block {
            statements: [],
            span: Span {
                start: Pos {
                    line: 0,
                    col: 17,
                },
                end: Pos {
                    line: 0,
                    col: 18,
                },
            },
        },
        span: Span {
            start: Pos {
                line: 0,
                col: 1,
            },
            end: Pos {
                line: 0,
                col: 18,
            },
        },
    },
)
