src/petal/snapshots/petal__petal__parser__tests__functions-9.snap
---
source: src/petal/parser.rs
expression: "parse_stmt(\"fn foo(): Int {}\")"
---
Func(
    FuncDecl {
        name: "foo",
        is_exported: false,
        type_params: [],
        args: [],
        return_ty: Some(
            TypeAnnotation {
                name: "Int",
                span: Span {
                    start: Pos {
                        line: 0,
                        col: 11,
                    },
                    end: Pos {
                        line: 0,
                        col: 13,
                    },
                },
            },
        ),
        body: Block {
            statements: [],
            span: Span {
                start: Pos {
                    line: 0,
                    col: 15,
                },
                end: Pos {
                    line: 0,
                    col: 16,
                },
            },
        },
        span: Span {
            start: Pos {
                line: 0,
                col: 1,
            },
            end: Pos {
                line: 0,
                col: 16,
            },
        },
    },
)
