src/petal/snapshots/petal__petal__parser__tests__functions.snap
---
source: src/petal/parser.rs
expression: "parse_stmt(\"fn foo() {}\")"
---
Func(
    FuncDecl {
        name: "foo",
        is_exported: false,
        type_params: [],
        args: [],
        body: Block {
            statements: [],
            span: Span {
                start: Pos {
                    line: 0,
                    col: 10,
                },
                end: Pos {
                    line: 0,
                    col: 11,
                },
            },
        },
        span: Span {
            start: Pos {
                line: 0,
                col: 1,
            },
            end: Pos {
                line: 0,
                col: 11,
            },
        },
    },
)
