src/petal/snapshots/petal__petal__parser__tests__groups-2.snap
---
source: src/petal/parser.rs
expression: "parse_expr(\"(1 + 2) * 3\")"
---
BinaryOp {
    left: BinaryOp {
        left: Integer {
            value: 1,
            span: Span {
                start: Pos {
                    line: 0,
                    col: 2,
                },
                end: Pos {
                    line: 0,
                    col: 2,
                },
            },
        },
        op: Token {
            token_type: Plus,
            lexeme: "+",
            literal: None,
            span: Span {
                start: Pos {
                    line: 0,
                    col: 4,
                },
                end: Pos {
                    line: 0,
                    col: 4,
                },
            },
        },
        right: Integer {
            value: 2,
            span: Span {
                start: Pos {
                    line: 0,
                    col: 6,
                },
                end: Pos {
                    line: 0,
                    col: 6,
                },
            },
        },
        span: Span {
            start: Pos {
                line: 0,
                col: 2,
            },
            end: Pos {
                line: 0,
                col: 6,
            },
        },
    },
    op: Token {
        token_type: Star,
        lexeme: "*",
        literal: None,
        span: Span {
            start: Pos {
                line: 0,
                col: 9,
            },
            end: Pos {
                line: 0,
                col: 9,
            },
        },
    },
    right: Integer {
        value: 3,
        span: Span {
            start: Pos {
                line: 0,
                col: 11,
            },
            end: Pos {
                line: 0,
                col: 11,
            },
        },
    },
    span: Span {
        start: Pos {
            line: 0,
            col: 2,
        },
        end: Pos {
            line: 0,
            col: 11,
        },
    },
}
