src/petal/snapshots/petal__petal__parser__tests__groups-3.snap
---
source: src/petal/parser.rs
expression: "parse(\"1 * (2 - 3)\")"
---
BinaryOp {
    left: Number {
        value: 1.0,
        span: Span {
            start: Pos {
                line: 0,
                col: 1,
            },
            end: Pos {
                line: 0,
                col: 1,
            },
        },
    },
    op: Token {
        token_type: Star,
        lexeme: "*",
        literal: None,
        span: Span {
            start: Pos {
                line: 0,
                col: 3,
            },
            end: Pos {
                line: 0,
                col: 3,
            },
        },
    },
    right: BinaryOp {
        left: Number {
            value: 2.0,
            span: Span {
                start: Pos {
                    line: 0,
                    col: 6,
                },
                end: Pos {
                    line: 0,
                    col: 6,
                },
            },
        },
        op: Token {
            token_type: Minus,
            lexeme: "-",
            literal: None,
            span: Span {
                start: Pos {
                    line: 0,
                    col: 8,
                },
                end: Pos {
                    line: 0,
                    col: 8,
                },
            },
        },
        right: Number {
            value: 3.0,
            span: Span {
                start: Pos {
                    line: 0,
                    col: 10,
                },
                end: Pos {
                    line: 0,
                    col: 10,
                },
            },
        },
        span: Span {
            start: Pos {
                line: 0,
                col: 6,
            },
            end: Pos {
                line: 0,
                col: 10,
            },
        },
    },
    span: Span {
        start: Pos {
            line: 0,
            col: 1,
        },
        end: Pos {
            line: 0,
            col: 10,
        },
    },
}
